Archive2/3a/0553f3dbc30cbf/output
main.cpp: In member function 'Pages Books::Physics(int)':
main.cpp:12:38: error: 'cout' was not declared in this scope
                 Pages Physics(int i){cout << "Number of pages" <<  i << endl;
                                      ^
main.cpp:12:73: error: 'endl' was not declared in this scope
                 Pages Physics(int i){cout << "Number of pages" <<  i << endl;
                                                                         ^
main.cpp: In function 'int main()':
main.cpp:25:9: error: 'cout' was not declared in this scope
         cout << p.m;
         ^
